<resources>
    <string name="app_name">Acessaí</string>
    <string name="lblAltoCon">Alto Contraste</string>
    <string name="lblPadrao">Padrão</string>
    <string name="lblDeficiencia">VOCÊ POSSUI ALGUMA DEFICIÊNCIA?</string>
    <string name="rbAuditiva">Auditiva</string>
    <string name="rbCognitiva">Cognitiva</string>
    <string name="rbVisual">Visual</string>
    <string name="rbNenhuma">Nenhuma</string>
    <string name="btnCadastro">CADASTRAR</string>
    <string name="txtNome">Nome</string>
    <string name="txtEmail">email@exemplo.com</string>
    <string name="btnSenha">Senha</string>
    <string name="txtConfirmarSenha">Confirmar Senha</string>
    <string name="txtEmailE">email@exemplo.com</string>
    <string name="btnEnviar">ENVIAR</string>
    <string name="lblMensE">Sua senha será enviada ao email cadastrado!</string>
    <string name="txtLogin">email@exemplo.com</string>
    <string name="txtSenhaL">Senha</string>
    <string name="lblContato">Contato</string>
    <string name="lblSobre">Sobre Nós</string>
    <string name="lblInfos">Infos</string>
    <string name="lblCrono">Cronograma</string>
    <string name="lblAulas">Aulas</string>
    <string name="btnLogar">LOGAR</string>
    <string name="btnCadastrar">CADASTRAR</string>
    <string name="btnEsqueceuSenha">ESQUECI A SENHA</string>
    <string name="lblEmailL">INSIRA SEU EMAIL</string>
    <string name="lblSenhaL">INSIRA SUA SENHA</string>
    <string name="lblNome">NOME</string>
    <string name="lblEmail">EMAIL</string>
    <string name="lblSenha">SENHA</string>
    <string name="lblConfirmarSenha">CONFIRMAR SENHA</string>
    <string name="lblAcessai">ACESSAÍ</string>
    <string name="lblEmailE">INSIRA EMAIL CADASTRADO</string>
    <string name="lblNomeUser">NOME</string>
    <string name="lblEmailUser">EMAIL</string>
    <string name="lblSenhaUser">SENHA</string>
    <string name="lblAssistUser">ASSISTÊNCIA</string>
    <string name="btnTbConosco">TRABALHE CONOSCO</string>
    <string name="lblDisc1">PORTUGUÊS</string>
    <string name="lblDisc2">MATEMÁTICA</string>
    <string name="lblDisc3">HISTÓRIA</string>
    <string name="lblDisc4">GEOGRAFIA</string>
    <string name="lblDisc5">BIOLOGIA</string>
    <string name="lblDisc6">FÍSICA</string>
    <string name="lblDisc7">QUÍMICA</string>
    <string name="lblDisc8">FILOSOFIA</string>
    <string name="lblDisc9">SOCIOLOGIA</string>
    <string name="lblDisc10">ARTE</string>
    <string name="lblDisc11">EDUCAÇÃO FÍSICA</string>
    <string name="lblDisc12">INGLÊS</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="nav_home">Home</string>
    <string name="nav_user">Usuario</string>
    <string name="nav_sair">Sair</string>

</resources>
