<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DisciplinaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImgDisc1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/imgport" />

                <ImageButton
                    android:id="@+id/btnImgDisc2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgmat" />

                <ImageButton
                    android:id="@+id/btnImgDisc3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imghist" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDisc1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc1"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc2"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc3"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImgDisc4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/imggeo" />

                <ImageButton
                    android:id="@+id/btnImgDisc5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgbio" />

                <ImageButton
                    android:id="@+id/btnImgDisc6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgfisic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDisc4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc4"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc5"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc6"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImgDisc7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/imgquim" />

                <ImageButton
                    android:id="@+id/btnImgDisc8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgfilo" />

                <ImageButton
                    android:id="@+id/btnImgDisc9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgsocio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDisc7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc7"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc8"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc9"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc9"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImgDisc10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/imgart" />

                <ImageButton
                    android:id="@+id/btnImgDisc11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imgedfisic" />

                <ImageButton
                    android:id="@+id/btnImgDisc12"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/imging" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="255dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDisc10"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc10"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc11"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc11"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDisc12"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/lblDisc12"
                    android:textColor="#68B0EE"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <include layout="@layout/libras_botao"/>
</FrameLayout>