<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroudzin"
    tools:context=".activitys.EsqueceuSenhaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="160dp"
                android:layout_height="185dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/email1" />

            <TextView
                android:id="@+id/lblEmailE"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:labelFor="@id/txtEmailE"
                android:text="@string/lblEmailE"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/txtEmailE"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#FFDA75"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/txtEmailE"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/lb1"
                android:fontFamily="@font/montserrat"
                android:lineHeight="15dp"
                android:paddingBottom="8dp"
                android:text="@string/btnEnviar"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblMensR"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:fontFamily="monospace"
                android:text="@string/lblMensE"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/falar_botao" />

    <include layout="@layout/libras_botao" />
</FrameLayout>